traces/bug_606.txt
src/bamglib/MeshGeom.cpp:1096: error: DEAD_STORE
  The value written to &reverse (type _Bool) is never used.
Showing all 1 steps of the trace


src/bamglib/MeshGeom.cpp:1096:12: Write of unused value
1094.             }
1095.               
1096.              bool reverse =be->ReverseEqui();
                   ^
1097.               //if( sens<0) reverse = !reverse; // remove 9 may 2017 
1098.               reverse=sens; // FH  Correct 9 may 2017 (ReverseEqui is wrong ??? maybe)
